--- a/ImageGallery/src/ImageGallery.Client/Views/Gallery/Index.cshtml
+++ b/ImageGallery/src/ImageGallery.Client/Views/Gallery/Index.cshtml
@@ -8,7 +8,7 @@
     {
         <div class="pull-left col-md-4">
             <div>
-                <img class="thumbnailImage" src="@("http://localhost:5000/images/" + item.FileName)" />
+                <img class="thumbnailImage" src="@("https://localhost:44329/images/" + item.FileName)" />
             </div>
             <div>
                 <div class="h5">@item.Title</div>
